Compucom CCQA Org 100919/src/objects/FCST_Opportunity_Initial_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments Unused Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCST_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Planning Version</label>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>FCST Opportunity Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Opportunity_Initial_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCST_Product_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FCST Product Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCST_Quarter__c</fullName>
        <formula>Fcst_Fiscal_Period__r.Fiscal_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCST Quarter Unused Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Revenue_Type__c</fullName>
        <formula>&apos;Consolidated Revenue&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCST Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Service_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FCST Service Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCST_Transition_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FCST Transition Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fcst_Fiscal_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Planning Fiscal Year</label>
        <referenceTo>Fiscal_Year_Model__c</referenceTo>
        <relationshipName>FCST_Oppy_Inicial_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fcst_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FCST Opportunity Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Oppy_Initial_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fcst_Q__c</fullName>
        <label>Fcst Q#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Weighted_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fcst Weighted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>LEFT(Fcst_Opportunity__c ,15) &amp; &apos;#&apos; &amp; LEFT(Fcst_Fiscal_Period__c,15) &amp; &apos;#&apos; &amp; LEFT(FCST_Planning_Version__c,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Adjusted_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>User Adjusted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>FCST Opportunity Initial Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fcst_Fiscal_Period__c</columns>
        <columns>FCST_Planning_Version__c</columns>
        <columns>Fcst_Q__c</columns>
        <columns>Fcst_Weighted_Revenue__c</columns>
        <columns>Fcst_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FCST Oppy Initial Forecast  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Opportunity Initial Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>